[package]
name = "fusion_browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webkit2gtk = {git= "https://github.com/tauri-apps/webkit2gtk-rs.git"}
gio = "^0.18.0"
glib = "^0.18.0"
gtk = "^0.18.0"